--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.20.2",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "^18",
