--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.52.2",
     "sonner": "^1.5.0"
   },
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-highlight-words": "^0.20.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "sass": "^1.77.8",
